// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostMenuActionsContent - Snapshots > matches snapshot for all menu items visible (other user post) 1`] = `
<div
  data-class-name="flex flex-col"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-disabled="false"
  >
    <span
      data-as="span"
      data-testid="typography"
    >
      Follow
    </span>
  </div>
  <div
    data-disabled="false"
  >
    <span
      data-as="span"
      data-testid="typography"
    >
      Mute user
    </span>
  </div>
  <div
    data-disabled="false"
  >
    <span
      data-as="span"
      data-testid="typography"
    >
      Report post
    </span>
  </div>
  <div
    data-disabled="false"
  >
    <span
      data-as="span"
      data-testid="typography"
    >
      Copy text of post
    </span>
  </div>
</div>
`;

exports[`PostMenuActionsContent - Snapshots > matches snapshot for mobile sheet variant 1`] = `
<div
  data-class-name="flex flex-col"
  data-override-defaults="true"
  data-testid="container"
>
  <button
    data-testid="menu-button"
  >
    <span
      data-as="span"
      data-testid="typography"
    >
      Follow
    </span>
  </button>
  <button
    data-testid="menu-button"
  >
    <span
      data-as="span"
      data-testid="typography"
    >
      Mute user
    </span>
  </button>
  <button
    data-testid="menu-button"
  >
    <span
      data-as="span"
      data-testid="typography"
    >
      Report post
    </span>
  </button>
  <button
    data-testid="menu-button"
  >
    <span
      data-as="span"
      data-testid="typography"
    >
      Copy text of post
    </span>
  </button>
</div>
`;

exports[`PostMenuActionsContent - Snapshots > matches snapshot for own post menu items 1`] = `
<div
  data-class-name="flex flex-col"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-disabled="false"
  >
    <span
      data-as="span"
      data-testid="typography"
    >
      Edit post
    </span>
  </div>
  <div
    data-disabled="false"
  >
    <span
      data-as="span"
      data-testid="typography"
    >
      Delete post
    </span>
  </div>
  <div
    data-disabled="false"
  >
    <span
      data-as="span"
      data-testid="typography"
    >
      Copy text of post
    </span>
  </div>
</div>
`;
